--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
   --color-white: #ffffff;
   --color-dairy: #fcfcfc;
 
-  --transition-dur-and-func: 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Сбрасывание стилей */
@@ -561,5 +561,123 @@ body {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+}
+
+/* ===== PORTFOLIO-OVERLAY ===== */
+
+
+.portfolio-list-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+
+.portfolio-overlay {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-bottom: 40px;
+  padding-left: 32px;
+
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  color: var(--color-cloud);
+  background-color: var(--color-iris);
+ 
+
+  transform: translateY(100%);
+  transition: transform var(--transition-dur-and-func) ;
+}
+
+.portfolio-link:is(:hover, :focus) .portfolio-overlay {
+  transform: translateY(0);
+}
+
+
+/* ===== MODAL WINDOW ===== */
+
+.backdrop {
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.40);
+  opacity:1;
+ 
+  transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
+ 
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+
+}
+
+.backdrop.is-hidden .modal-window {
+  transform: translate(-50%, -50%) scale(0.8);
+  
+}
+
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+  width: 408px;
+  height: 584px;
+
+  background-color: var(--color-dairy);
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+  transform: translate(-50%, -50%) scale(1.2);
+  transition: transform var(--transition-dur-and-func);
+}
+
+
+.close-button {
+  position: absolute;
+  top:24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+
+  display: flex;
+  align-items:center;
+  justify-content: center;
+
+  border-radius: 50%;
+  color:var(--color-navy-blue);
+  border: 1px solid rgba(0, 0, 0, 0.10);
+  background-color: var(--color-cornflower);
+  cursor: pointer;
+
+  transition: background-color var(--transition-dur-and-func) ;
+}
+
+.icon-close-button {
+  fill:currentColor;
+  transition: fill var(--transition-dur-and-func);
+
+}
+
+.close-button:is(:hover, :focus) {
+  background-color: var(--color-ocean);
+}
+
+.close-button:is(:hover, :focus) .icon-close-button {
+fill: var(--color-white);
 }
 
